menu items vertically aligned correctly see #132

--- a/sites/all/themes/zwerm/sass/pages.scss
+++ b/sites/all/themes/zwerm/sass/pages.scss
@@ -53,13 +53,31 @@ body {
  */
 
 #header {
-  //float:none;
-  border-width : 1px;
   background-color: $header-color;
-  border-bottom-style : solid;
   position: fixed;
   height : $header-height;
   width : 100%;
+  #header_align
+  {
+    padding-top: 20px;
+  }
+  #home_nav
+  {
+    float:left;
+    width:33%;
+  }
+  #home_logo
+  {
+    width:33px;
+    float:left;
+    margin-top: 2px;
+  }
+  #home_text
+  {
+    color:#FFFFFF;
+    float:left;
+    padding-left: 10px;
+  }
   #team_name
   {
     text-align: center;
@@ -72,31 +90,26 @@ body {
   }
   #menu_container
   {
-    color: #FFFFFF;
+
     width:33%;
     float:right;
   }
-  #menu_text
+  #menu_icon
   {
     float:right;
-  }
-
-
-}
-
-#logo { /* Wrapping link for logo */
-  //float: left; /* LTR */
-  //margin: 0;
-  //padding: 0;
-  //padding-top:20px;
-  float:left;
-  width:33%;
-
-  img {
+    width:20px;
     vertical-align: bottom;
-    width : 45px;
+    padding-left: 10px;
+  }
+  #menu_text
+  {
+    color: #FFFFFF;
+    float:right;
+    vertical-align: text-bottom;
   }
 }
+
+
 
 #name-and-slogan { /* Wrapper for website name and slogan */
   float: left;
